# MyPracticeProjects

./: README.md  app.txt  change_impact_summary.txt  cp.txt
CPP_Essentials/AdvanceCPP/: Serializer  Serializer_Deser.cpp  assignOperator  assignOperator.cpp  async  async.cpp  atomic  atomic.cpp  bind_qnx  bind_qnx.cpp  const_Cast  const_Cast.cpp  const_Cast_undef_behav  const_Cast_undef_behav.cpp  constexpr  constexpr.cpp  constructor  constructor.cpp  explicit  explicit.cpp  functor  functor.cpp  gaurd  lock_gaurd  lock_gaurd.cpp  move_resource  move_resource.cpp  move_vector  move_vector.cpp  pmr_monotonic  pmr_monotonic.cpp  promise_futures  promise_futures.cpp  re_interpretCast  re_interpretCast.cpp  smartptr  smartptr.cpp
CPP_Essentials/DSA/: sliding_window  sliding_window.cpp
CPP_Essentials/Dbus/: Makefile  (+2 more)
bazel_essentials/: BUILD  WORKSPACE  bazel-bazel_essentials  bazel-bin  bazel-out  bazel-testlogs  hello.py
build_essentials/cpp_cmake_build/: CMakeLists.txt
build_essentials/cpp_cmake_build/lib/: dummy.cpp
build_essentials/cpp_cmake_build/src/: hello.cpp
git_essentials/: app.txt
linux_essentials/: backup_files.sh  build_env_flags.sh  check_build_Status.sh  daily_error_summary.sh  disk_monitor.sh  error_Scan.sh  error_summary.py  file_ops.py  list_files.sh  process_monitor.py  vars.sh
python_essentials/: arg_parse.py  count_errors.py  error_analyzer.py  extract_timestamp.py  git_auto_commit.py  git_change_summary.py  git_diff.py  git_python.py  main.py  read_csv.py  read_json.py  recent_commits.py  requirements.txt  test_todo_hook.py  utils.py
(+141 files in other folders)
